# memorylite-agent

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
benchmarks/: run_benchmark.py
benchmarks/datasets/: memory_benchmark_v1.json
docs/: BENCHMARKING.md  BENCHMARKING.zh-CN.md  RETRIEVAL.md  RETRIEVAL.zh-CN.md
examples/: basic_usage.py  chat_loop.py  deepseek_chat.py  openai_compatible_chat.py  qwen_chat.py
memorylite/: __init__.py  agent.py  archive.py  compiler.py  config.py  retriever.py  schema.py  store.py
memorylite/llm/: __init__.py  base.py  demo.py  model_controller.py  ollama.py  openai_chat.py  openai_embeddings.py  openai_like.py
tests/: test_smoke.py
